# manga

./: .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
manga/sites/: __init__.py  domains.py  test.py  unknown_domain.py
manga/tools/: __init__.py  guess.py  inc_chapter.py  no_unicode.py  open_new.py  test_sites.py  unnumbered_helper.py  up_number.py
manga/tools/open_new/: __init__.py  cli.py  open_new.py  results.py  tested.py  thread_handler.py
manga/tools/test_sites/: __init__.py  cli.py  dispatch.py  results.py  state.py  status.py  test_sites.py  test_url.py
manga/utils/: __init__.py  extract_url.py  files.py  log.py  redirect_print_to_tqdm.py  singleton.py  split_on_num.py
