[metadata]
name = manga_scrape
version = attr: manga.__version__
url = https://github.com/zwimer/manga
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
license = GPL
license_files = LICENSE
description = A python package used for automating finding manga chapters
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.8
packages = find:
install_requires =
	tldextract
	requests
	osascript
	regex
	tqdm

[options.package_data]
manga_scrape = py.typed

[options.entry_points]
console_scripts =
	guess = manga.tools.guess:cli
	inc-chapter = manga.tools.inc_chapter:cli
	open-new = manga.tools.open_new:cli
	test-sites = manga.tools.test_sites:cli
	unnumbered-helper = manga.tools.unnumbered_helper:cli
	up-number = manga.tools.up_number:cli
	no-unicode = manga.tools.no_unicode:cli
