[metadata]
name = manga_scrape
version = attr: manga.__version__
description = A python package used for automating finding manga chapters
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zwimer/manga
license = GPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    osascript
    regex
    requests
    tldextract
    tqdm
python_requires = >=3.8

[options.entry_points]
console_scripts =
    guess = manga.tools.guess:cli
    inc-chapter = manga.tools.inc_chapter:cli
    open-new = manga.tools.open_new:cli
    test-sites = manga.tools.test_sites:cli
    unnumbered-helper = manga.tools.unnumbered_helper:cli
    up-number = manga.tools.up_number:cli
    no-unicode = manga.tools.no_unicode:cli

[options.package_data]
manga_scrape = py.typed
